# hadris

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  release.toml  test.iso
.github/: CODEOWNERS
crates/archive/hadris-archive/: Cargo.toml
crates/archive/hadris-archive/src/: lib.rs
crates/block/hadris-apfs/: Cargo.toml  README.md
crates/block/hadris-apfs/src/: error.rs  lib.rs
crates/block/hadris-block/: Cargo.toml
crates/block/hadris-block/src/: detect.rs  error.rs  lib.rs  partition.rs  volume_async.rs  volume_sync.rs
crates/block/hadris-block/tests/: async_volume.rs  open_volume.rs
crates/block/hadris-fat/: Cargo.toml  README.md  build.rs
crates/block/hadris-fat/src/: cache.rs  dir.rs  error.rs  fat_table.rs  file.rs  fs.rs  io.rs  lib.rs  oem.rs  raw.rs  read.rs  time.rs  write.rs
crates/block/hadris-fat/tests/: async_roundtrip.rs  cache_integration.rs  comprehensive_fat.rs  exfat_roundtrip.rs  exfat_upcase_dos.rs  fat_roundtrip.rs  integration_exfat.rs  mtools_fidelity.rs  test_exfat.rs  test_read.rs  test_write.rs  v2_api.rs
crates/block/hadris-part/: Cargo.toml  README.md
crates/block/hadris-part/src/: error.rs  geometry.rs  gpt.rs  gpt_io.rs  hybrid.rs  lib.rs  mbr.rs  mbr_io.rs  partition_table_io.rs  scheme.rs  scheme_io.rs
crates/block/hadris-part/tests/: async_io_roundtrip.rs  io_roundtrip.rs  roundtrip.rs
crates/core/hadris-common/: Cargo.toml  README.md
crates/core/hadris-common/boot_sector/: Cargo.toml  README.md  linker.ld
crates/core/hadris-common/src/: lib.rs  optical.rs  path.rs
crates/core/hadris-common/tests/: types_integration.rs
crates/core/hadris-fixed/: Cargo.toml  README.md
crates/core/hadris-fixed/src/: lib.rs
crates/core/hadris-io/: Cargo.toml  README.md
crates/core/hadris-io/src/: async_api.rs  error.rs  lib.rs  traits.rs
crates/core/hadris-macros/: Cargo.toml  README.md
crates/core/hadris-macros/src/: lib.rs
crates/core/hadris-path/: Cargo.toml  README.md
crates/core/hadris-path/src/: lib.rs
crates/core/hadris-storage/: Cargo.toml  README.md
crates/core/hadris-storage/src/: async.rs  error.rs  geometry.rs  lib.rs  sync.rs  view.rs
crates/hadris/: Cargo.toml
crates/hadris-cd/: Cargo.toml  README.md
crates/hadris-cd/src/: error.rs  layout.rs  lib.rs  tree.rs  writer.rs
crates/hadris-cli/: Cargo.toml  README.md
crates/hadris-cli/src/: main.rs
crates/hadris-common/: Cargo.toml  README.md
crates/hadris-common/boot_sector/: build.rs  linker.ld
crates/hadris-common/boot_sector/src/: boot_sector.s
crates/hadris-common/src/: lib.rs  optical.rs
crates/hadris-common/src/alg/: mod.rs
crates/hadris-common/src/part/: gpt.rs  mbr.rs  mod.rs
crates/hadris-common/src/str/: mod.rs  utf16.rs
crates/hadris-common/src/types/: endian.rs  extent.rs  file.rs  layout.rs  mod.rs  no_alloc.rs  number.rs  vec.rs
crates/hadris-common/tests/: types_integration.rs
crates/hadris-core/: Cargo.toml  README.md
crates/hadris-core/src/: bpb.rs  disk.rs  file.rs  internal.rs  lib.rs  path.rs  str.rs  time.rs
crates/hadris-cpio/: Cargo.toml  README.md
crates/hadris-cpio-cli/: Cargo.toml  README.md
crates/hadris-cpio-cli/src/commands/: cat.rs  create.rs  extract.rs  info.rs
crates/hadris-cpio/src/: entry.rs  error.rs  header.rs  lib.rs  mode.rs  read.rs
crates/hadris-cpio/src/write/: file_tree.rs  from_fs.rs  mod.rs
crates/hadris-cpio/tests/: alloc_bomb.rs  roundtrip.rs
crates/hadris-fat/: Cargo.toml  README.md  build.rs
crates/hadris-fat-cli/: Cargo.toml  README.md
crates/hadris-fat-cli/src/: main.rs
crates/hadris-fat-cli/tests/: cli_smoke.rs
crates/hadris-fat/src/: cache.rs  dir.rs  error.rs  fat_table.rs  file.rs  fs.rs  io.rs  lib.rs  oem.rs  raw.rs  read.rs  write.rs
crates/hadris-fat/src/exfat/: bitmap.rs  boot.rs  dir.rs  entry.rs  entry_writer.rs  fat.rs  file.rs  format.rs  fs.rs  mod.rs  time.rs  upcase.rs
crates/hadris-fat/tests/: cache_integration.rs  comprehensive_fat.rs  exfat_helpers.rs  exfat_roundtrip.rs  exfat_upcase_dos.rs  fat_helpers.rs  fat_roundtrip.rs  test_exfat.rs  test_read.rs  test_write.rs
crates/hadris-io/: Cargo.toml  README.md
crates/hadris-io/src/: async_api.rs  error.rs  lib.rs  sync_api.rs  traits.rs
crates/hadris-io/tests/: cursor_tests.rs  interoperability.rs
crates/hadris-iso/: Cargo.toml  README.md
crates/hadris-iso-cli/: Cargo.toml  README.md
crates/hadris-iso-cli/src/: args.rs  commands.rs  main.rs  read.rs  write.rs  xorriso.rs
crates/hadris-iso/benches/: iso_benchmarks.rs
crates/hadris-iso/examples/: create_bootable_iso.rs  extract_files.rs  read_iso.rs
crates/hadris-iso/spec/: Booting.md  Specification.md
crates/hadris-iso/src/: boot.rs  directory.rs  file.rs  io.rs  joliet.rs  lib.rs  modify.rs  options.rs  path.rs  rrip.rs  susp.rs  types.rs  volume.rs
crates/hadris-iso/tests/: benchmark.rs  comprehensive_iso.rs  integration_xorriso.rs  iso_roundtrip_advanced.rs  rrip_reader.rs  xorriso_advanced.rs  xorriso_basic.rs  xorriso_boot.rs  xorriso_helpers.rs  xorriso_hybrid.rs
crates/hadris-macros/: Cargo.toml  README.md
crates/hadris-macros/src/: lib.rs
crates/hadris-ntfs/: Cargo.toml
crates/hadris-ntfs/src/: attr.rs  dir.rs  error.rs  fs.rs  lib.rs  raw.rs  read.rs
crates/hadris-ntfs/tests/: Cargo.toml
crates/hadris-part/: Cargo.toml  README.md
crates/hadris-part/src/: error.rs  geometry.rs  gpt.rs  gpt_io.rs  hybrid.rs  lib.rs  mbr.rs  mbr_io.rs  scheme.rs  scheme_io.rs
crates/hadris-part/tests/: io_roundtrip.rs  roundtrip.rs
crates/hadris-udf/: Cargo.toml  README.md
crates/hadris-udf-cli/: Cargo.toml  README.md
crates/hadris-udf-cli/src/: args.rs  main.rs
crates/hadris-udf/src/: dir.rs  error.rs  file.rs  fs.rs  lib.rs  modify.rs  time.rs
crates/hadris-udf/tests/: comprehensive_udf.rs  integration_external.rs
crates/hadris/src/: lib.rs
fuzz/: .gitignore  Cargo.toml  README.md
fuzz/corpus/iso_read/: valid.iso
fuzz/corpus/udf_read/: valid.udf
fuzz/fuzz_targets/: cpio_read.rs  fat_read.rs  iso_read.rs  udf_read.rs
(+348 files in other folders)
