[workspace]
resolver = "2"
members = [
  "crates/hadris-macros",
  "crates/hadris-iso-cli",
  "crates/hadris-iso",
  "crates/hadris-udf",
  "crates/hadris-cd",
  "crates/hadris-common",
  "crates/hadris",
  "crates/hadris-io",
  "crates/hadris-part",
  "crates/hadris-fat",
  "crates/hadris-fat-cli",
  "crates/hadris-cli",
  "crates/hadris-cpio",
  "crates/hadris-cpio-cli",
]
default-members = [
  "crates/hadris-iso",
  "crates/hadris-udf",
  "crates/hadris-cd",
  "crates/hadris-common",
  "crates/hadris",
  "crates/hadris-io",
  "crates/hadris-part",
  "crates/hadris-fat",
  "crates/hadris-cli",
  "crates/hadris-cpio",
]

[workspace.package]
version = "1.0.2"
edition = "2024"
authors = ["hxyulin"]
license = "MIT"
repository = "https://github.com/hxyulin/hadris"

[workspace.dependencies]
log = "0.4.26"
bytemuck = { version = "1.22.0", default-features = false }
bitflags = "2.9.0"
static_assertions = "1.1.0"
criterion = "0.5.1"
thiserror = { version = "2.0.12", default-features = false }
cfg-if = "1.0.0"
tempfile = "3.19.1"
chrono = { version = "0.4.40", default-features = false }
tracing = "0.1.41"
spin = "0.10.0"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

# Internal crates
hadris-macros = { version = "1.0.2", path = "crates/hadris-macros" }
hadris-io = { version = "1.0.2", path = "crates/hadris-io", default-features = false }
hadris-iso = { version = "1.0.2", path = "crates/hadris-iso", default-features = false }
hadris-udf = { version = "1.0.2", path = "crates/hadris-udf", default-features = false }
hadris-cd = { version = "1.0.2", path = "crates/hadris-cd", default-features = false }
hadris-fat = { version = "1.0.2", path = "crates/hadris-fat", default-features = false }
hadris-common = { version = "1.0.2", path = "crates/hadris-common", default-features = false }
hadris-part = { version = "1.0.2", path = "crates/hadris-part", default-features = false }
hadris-cpio = { version = "1.0.2", path = "crates/hadris-cpio", default-features = false }
