[workspace]
resolver = "2"
members = [
    "crates/core/*",
    "crates/block/*",
    "crates/optical/*",
    "crates/archive/*",
    "crates/tools/*",
]
default-members = [
    "crates/core/*",
    "crates/block/*",
    "crates/optical/*",
    "crates/archive/*",
    "crates/tools/*",
]

[workspace.package]
version = "1.2.1"
edition = "2024"
rust-version = "1.88.0"
authors = ["hxyulin"]
license = "MIT"
repository = "https://github.com/hxyulin/hadris"

[workspace.dependencies]
log = "0.4.26"
bytemuck = { version = "1.22.0", default-features = false }
zerocopy = { version = "0.8", default-features = false, features = ["derive"] }
endian-num = { version = "0.2", default-features = false, features = ["bytemuck"] }
bitflags = "2.9.0"
static_assertions = "1.1.0"
criterion = "0.5.1"
thiserror = { version = "2.0.12", default-features = false }
cfg-if = "1.0.0"
embedded-io = { version = "0.7", default-features = false }
embedded-io-async = { version = "0.7", default-features = false }
tempfile = "3.19.1"
chrono = { version = "0.4.40", default-features = false }
tracing = "0.1.41"
spin = "0.12.1"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

# Internal crates
hadris-macros = { version = "1.2.1", path = "crates/core/hadris-macros" }
hadris-io = { version = "1.2.1", path = "crates/core/hadris-io", default-features = false }
hadris-common = { version = "1.2.1", path = "crates/core/hadris-common", default-features = false }
hadris-fat = { version = "1.2.1", path = "crates/block/hadris-fat", default-features = false }
hadris-part = { version = "1.2.1", path = "crates/block/hadris-part", default-features = false }
hadris-iso = { version = "1.2.1", path = "crates/optical/hadris-iso", default-features = false }
hadris-udf = { version = "1.2.1", path = "crates/optical/hadris-udf", default-features = false }
hadris-cd = { version = "1.2.1", path = "crates/optical/hadris-cd", default-features = false }
hadris-cpio = { version = "1.2.1", path = "crates/archive/hadris-cpio", default-features = false }
