[workspace]
resolver = "2"
members = [
    "crates/core/*",
    "crates/block/*",
    "crates/optical/*",
    "crates/archive/*",
    "crates/tools/*",
    "examples/*",
]
default-members = [
    "crates/core/*",
    "crates/block/*",
    "crates/optical/*",
    "crates/archive/*",
    "crates/tools/*",
]

[workspace.package]
edition = "2024"
rust-version = "1.88.0"
authors = ["hxyulin"]
license = "MIT"
repository = "https://github.com/hxyulin/hadris"

[workspace.dependencies]
log = "0.4.26"
bytemuck = { version = "1.22.0", default-features = false }
zerocopy = { version = "0.8", default-features = false, features = ["derive"] }
endian-num = { version = "0.2", default-features = false, features = ["bytemuck"] }
bitflags = "2.9.0"
static_assertions = "1.1.0"
criterion = "0.5.1"
thiserror = { version = "2.0.12", default-features = false }
cfg-if = "1.0.0"
embedded-io = { version = "0.7", default-features = false }
embedded-io-async = { version = "0.7", default-features = false }
tempfile = "3.19.1"
chrono = { version = "0.4.40", default-features = false }
tracing = "0.1.41"
spin = "0.12.1"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

# Internal crates
hadris-macros = { version = "2.0.0-rc.4", path = "crates/core/hadris-macros" }
hadris-io = { version = "2.0.0-rc.4", path = "crates/core/hadris-io", default-features = false }
hadris-fixed = { version = "2.0.0-rc.4", path = "crates/core/hadris-fixed", default-features = false }
hadris-path = { version = "2.0.0-rc.4", path = "crates/core/hadris-path", default-features = false }
hadris-common = { version = "2.0.0-rc.4", path = "crates/core/hadris-common", default-features = false }
hadris-storage = { version = "2.0.0-rc.4", path = "crates/core/hadris-storage", default-features = false }
hadris-block = { version = "2.0.0-rc.4", path = "crates/block/hadris-block", default-features = false }
hadris-fat = { version = "2.0.0-rc.4", path = "crates/block/hadris-fat", default-features = false }
hadris-part = { version = "2.0.0-rc.4", path = "crates/block/hadris-part", default-features = false }
hadris-apfs = { version = "2.0.0-rc.4", path = "crates/block/hadris-apfs", default-features = false }
hadris-optical = { version = "2.0.0-rc.4", path = "crates/optical/hadris-optical", default-features = false }
hadris-iso = { version = "2.0.0-rc.4", path = "crates/optical/hadris-iso", default-features = false }
hadris-udf = { version = "2.0.0-rc.4", path = "crates/optical/hadris-udf", default-features = false }
hadris-cd = { version = "2.0.0-rc.4", path = "crates/optical/hadris-cd", default-features = false }
hadris-archive = { version = "2.0.0-rc.4", path = "crates/archive/hadris-archive", default-features = false }
hadris-cpio = { version = "2.0.0-rc.4", path = "crates/archive/hadris-cpio", default-features = false }
