[package]
name = "hadris-cd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Hybrid ISO+UDF optical disc image creation (UDF Bridge format)"
keywords = ["iso", "udf", "optical", "cd", "dvd"]
categories = ["filesystem", "encoding"]

[features]
default = ["std"]
sync = ["hadris-io/sync", "hadris-iso/sync", "hadris-udf/sync"]
async = ["hadris-io/async", "hadris-iso/async", "hadris-udf/async"]
std = ["sync", "hadris-io/std", "hadris-iso/std", "hadris-udf/std", "dep:thiserror"]

[dependencies]
hadris-io = { workspace = true, features = ["std"] }
hadris-iso = { workspace = true, features = ["std", "write"] }
hadris-udf = { workspace = true, features = ["std", "write"] }
hadris-macros = { workspace = true }
thiserror = { workspace = true, optional = true }
