[package]
name = "hadris-cli"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI utility for filesystem operations"
readme = "README.md"

[dependencies]
hadris-fat = { workspace = true, features = ["std", "read", "write", "lfn"] }

clap = { version = "4.5.32", features = ["derive"] }
