[package]
name = "hadris-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI utility for filesystem operations"
readme = "README.md"
keywords = ["filesystem", "cli", "fat", "disk"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
hadris-fat = { workspace = true, features = ["std", "read", "write", "lfn"] }

clap.workspace = true
