[package]
name = "hadris-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Common types and functions used by Hadris"
readme = "README.md"
include = ["src/**/*", "Cargo.toml"]

[features]
default = ["bytemuck", "std"]
alloc = []
std = ["dep:chrono", "dep:crc", "dep:rand", "alloc"]
bytemuck = ["dep:bytemuck"]

[dependencies]
bytemuck = { workspace = true, optional = true, features = ["derive"] }
chrono = { version = "0.4.40", optional = true }
crc = { version = "3.2.1", optional = true }
rand = { version = "0.9.0", optional = true }
noalloc = "0.0.1"

[dev-dependencies]
criterion.workspace = true
static_assertions.workspace = true
