[package]
name = "hadris-common"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Common types and functions used by Hadris"
readme = "README.md"
keywords = ["filesystem", "endian", "crc", "iso-string"]
categories = ["no-std", "filesystem"]
include = ["src/**/*", "Cargo.toml"]

[features]
default = ["bytemuck", "std"]
sync = ["hadris-io/sync"]
async = ["hadris-io/async"]
alloc = ["hadris-io/alloc"]
std = ["sync", "dep:chrono", "chrono?/std", "dep:crc", "dep:rand", "alloc"]
bytemuck = ["dep:bytemuck"]
optical = ["alloc"]  # Optical media types (SessionInfo, OpticalMetadataWriter)

[dependencies]
bytemuck = { workspace = true, optional = true, features = ["derive"] }
zerocopy = { workspace = true }
chrono = { workspace = true, optional = true }
crc = { version = "3.2.1", optional = true }
rand = { version = "0.9.0", optional = true }
noalloc = "0.0.1"
hadris-io = { workspace = true }  # For I/O traits in optical module

[dev-dependencies]
criterion.workspace = true
static_assertions.workspace = true
