[package]
name = "hadris-core"
description = "Hadris core library"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "README.md"

[features]
default = ["std"]
alloc = []
std = ["alloc", "spin/std", "chrono/std"]

[dependencies]
bitflags = { workspace = true }
spin = { version = "0.9.8" }
chrono = { workspace = true }
