[package]
name = "hadris-cpio"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A rust implementation of the CPIO archive format (newc/SVR4)."
keywords = ["cpio", "archive", "initramfs", "linux", "filesystem"]
categories = ["filesystem", "encoding"]

[features]
default = ["std", "read", "write"]
# Read support
read = []
# Heap allocation without full std
alloc = ["hadris-io/alloc"]
# Standard library support (includes alloc)
std = ["hadris-io/std", "hadris-common/std", "alloc", "sync"]
# Write/format support (requires alloc + read)
write = ["alloc", "read"]
# Synchronous API (uses hadris-io sync traits)
sync = ["hadris-io/sync"]
# Asynchronous API (uses hadris-io async traits)
async = ["hadris-io/async"]

[dependencies]
hadris-io = { workspace = true }
hadris-common = { workspace = true }
hadris-macros = { workspace = true }

[dev-dependencies]
tempfile.workspace = true
