[package]
name = "hadris-fat-cli"
version = "0.2.0"
description = "CLI utility for FAT filesystem analysis and management"
readme = "README.md"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "fatutil"
path = "src/main.rs"

[dependencies]
hadris-fat = { workspace = true, features = ["std", "read", "write", "lfn", "tool"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
