[package]
name = "hadris-fat"
description = "A library for working with FAT32 file systems (FAT12/16/exFAT planned)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["read", "write", "lfn", "std"]
alloc = ["chrono/alloc"]
std = ["alloc", "chrono/std", "chrono/clock"]
read = []
write = ["alloc", "read"]
lfn = []
# FAT sector caching for reduced I/O operations
cache = ["alloc"]
# Analysis and diagnostic APIs
tool = ["alloc", "read"]
# exFAT filesystem support
exfat = ["alloc"]

[dependencies]
hadris-common = { workspace = true }
hadris-io = { workspace = true }
spin.workspace = true

bitflags = { workspace = true }
bytemuck = { workspace = true, features = [
  "derive",
  "min_const_generics",
] }
chrono = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
pretty_assertions = "1.4.1"
static_assertions = "1.1.0"
