[package]
name = "hadris-io"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "No-std I/O traits and utilities for the Hadris filesystem crates"
readme = "README.md"

[features]
default = ["std"]
std = []

[dependencies]
cfg-if.workspace = true
bytemuck.workspace = true
