[package]
name = "hadris-io"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "No-std I/O traits and utilities for the Hadris filesystem crates"
readme = "README.md"

[features]
default = ["std"]
std = []

[dependencies]
cfg-if.workspace = true
bytemuck.workspace = true
