[package]
name = "hadris-iso-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
clap = { version = "4.5.32", features = ["derive"] }

hadris-iso.workspace = true
tracing.workspace = true
tracing-subscriber = "0.3.20"
