[package]
name = "hadris-iso-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI utility for ISO 9660 image operations"
readme = "README.md"
keywords = ["iso9660", "iso", "cli", "optical", "disk"]
categories = ["command-line-utilities", "filesystem"]

[dependencies]
clap.workspace = true

hadris-iso = { workspace = true, features = ["std", "write", "joliet"] }
tracing.workspace = true
tracing-subscriber = "0.3.20"
