[package]
name = "hadris-iso"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "A rust implementation of the ISO-9660 filesystem."
keywords = ["el-torito", "iso", "iso9660", "cd", "dvd"]
categories = ["filesystem", "encoding"]
exclude = ["/spec"]

[features]
default = ["std", "write"]
write = ["alloc"]
alloc = []
std = ["hadris-io/std", "alloc"]

[dependencies]
bitflags = { workspace = true, features = ["bytemuck"] }
bytemuck = { workspace = true, features = ["derive"] }
log.workspace = true
thiserror.workspace = true
chrono.workspace = true
hadris-io = { workspace = true }
hadris-common = { workspace = true }
spin = "0.10.0"

[dev-dependencies]
static_assertions.workspace = true
tempfile.workspace = true
