[package]
name = "hadris-iso"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "A rust implementation of the ISO-9660 filesystem."
keywords = ["el-torito", "iso", "iso9660", "cd", "dvd"]
categories = ["filesystem", "encoding"]
exclude = ["/spec"]

[features]
default = ["std", "write"]
# No-std + no-alloc read support (minimal, for bootloaders)
read = ["hadris-common/bytemuck"]
# Heap allocation without full std
alloc = []
# Standard library support (includes alloc)
std = ["sync", "hadris-io/std", "hadris-common/std", "hadris-common/bytemuck", "alloc", "dep:thiserror", "dep:tracing", "dep:chrono"]

sync = ["hadris-io/sync", "hadris-common/sync", "hadris-part/sync"]
async = ["hadris-io/async", "hadris-common/async", "hadris-part/async"]

write = ["alloc", "std", "hadris-part/write"]
joliet = ["alloc"]

[dependencies]
bitflags = { workspace = true, features = ["bytemuck"] }
bytemuck = { workspace = true, features = ["derive"] }
thiserror = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
tracing = { workspace = true, optional = true }
hadris-io = { workspace = true }
hadris-macros = { workspace = true }
hadris-common = { workspace = true, features = ["alloc"] }
hadris-part = { workspace = true, default-features = false }
spin.workspace = true

[dev-dependencies]
static_assertions.workspace = true
tempfile.workspace = true
criterion.workspace = true

[[bench]]
name = "iso_benchmarks"
harness = false
