[package]
name = "hadris-macros"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Proc macros for dual sync/async code generation in Hadris"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
