[package]
name = "hadris-ntfs"
version.workspace = true
description = "A library for reading NTFS filesystems"
keywords = ["ntfs", "filesystem", "no-std"]
categories = ["no-std", "filesystem"]
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = ["read", "std"]
sync = ["hadris-io/sync", "hadris-common/sync"]
async = ["hadris-io/async", "hadris-common/async"]
alloc = []
std = ["sync", "alloc", "hadris-io/std", "hadris-common/std"]
read = ["alloc"]

[dependencies]
hadris-common = { workspace = true }
hadris-io = { workspace = true }
hadris-macros = { workspace = true }
spin.workspace = true
bitflags = { workspace = true }
bytemuck = { workspace = true, features = [
  "derive",
  "min_const_generics",
] }
ucs2 = "0.3"

[dev-dependencies]
static_assertions = { workspace = true }
