[package]
name = "hadris-part"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Partition table support for MBR, GPT, and Hybrid MBR"
readme = "README.md"
keywords = ["partition", "mbr", "gpt", "disk", "no-std"]
categories = ["no-std", "filesystem"]

[features]
default = ["std"]
std = ["sync", "alloc", "hadris-io/std"]
sync = ["hadris-io/sync"]
async = ["hadris-io/async"]
alloc = []
read = []
write = ["alloc", "read"]

[dependencies]
hadris-io = { workspace = true, default-features = false }
hadris-macros = { workspace = true }
bytemuck = { workspace = true, features = ["derive", "min_const_generics"] }
crc = { version = "3", default-features = false, optional = true }
rand = { version = "0.9", default-features = false, optional = true, features = ["thread_rng"] }
