[package]
name = "hadris"
version = "0.2.0"
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "A collection of crates for working with various file formats."
categories = ["filesystem", "encoding"]

[features]
default = ["iso9660", "fat"]
iso9660 = ["dep:hadris-iso"]
fat = ["dep:hadris-fat"]
udf = ["dep:hadris-udf"]

[dependencies]
hadris-iso = { workspace = true, optional = true, features = ["std", "write"] }
hadris-fat = { workspace = true, optional = true, features = ["std", "read", "write", "lfn"] }
hadris-udf = { workspace = true, optional = true, features = ["std", "read"] }
