[package]
name = "hadris"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme = "../../README.md"
description = "A collection of crates for working with various file formats."
keywords = ["filesystem", "iso9660", "fat32", "udf", "cpio"]
categories = ["filesystem", "encoding"]

[features]
default = ["iso9660", "fat", "cpio"]
sync = ["hadris-iso?/sync", "hadris-fat?/sync", "hadris-udf?/sync", "hadris-cpio?/sync"]
async = ["hadris-iso?/async", "hadris-fat?/async", "hadris-udf?/async", "hadris-cpio?/async"]
iso9660 = ["dep:hadris-iso"]
fat = ["dep:hadris-fat"]
udf = ["dep:hadris-udf"]
cpio = ["dep:hadris-cpio"]

[dependencies]
hadris-iso = { workspace = true, optional = true, features = ["std", "write"] }
hadris-fat = { workspace = true, optional = true, features = ["std", "read", "write", "lfn"] }
hadris-udf = { workspace = true, optional = true, features = ["std", "read"] }
hadris-cpio = { workspace = true, optional = true, features = ["std", "read", "write"] }
